# solar-tracker

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  README_zh.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.ts
api/: main.py
backend/: main.py  tracker_logic.py
backend/static/: index.html
backend/static/assets/: index-Sgt-a5iy.js  index-gfXXt1FA.css
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Dial.tsx  SimulationCanvas.tsx  TelemetryPanel.tsx  TimeControls.tsx
frontend/src/lib/: solarCalculations.ts
public/: builds.json
src/: App.tsx  index.css
src/components/: SimulationCanvas.tsx  TelemetryPanel.tsx  TimeControls.tsx
src/lib/: solar.ts  solarCalculations.ts
