[project]
name = "solar-reflector-tracker"
version = "0.1.0"
description = "A FastAPI-based solar position tracking and mirror control system"
authors = [
    {name = "Walker", email = "walker@example.com"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pysolar>=0.11",
    "pyserial>=3.5",
    "pytz>=2023.3",
]
requires-python = ">=3.9"

[project.scripts]
app = "backend.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
